plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group = 'com.OOD.Group1'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.ood.groupOne.card_guessing_game.MainApp'
}

javafx {
    version = '21'
    modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.media']
}

dependencies {
    implementation "org.openjfx:javafx-controls:21"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
    useJUnitPlatform()
}

tasks.register('runVisualTimerTest', JavaExec) {
    group = 'application'
    description = 'Runs the TimerVisualTest JavaFX UI'

    classpath = sourceSets.main.runtimeClasspath
    mainClass.set('com.ood.groupOne.card_guessing_game.TimerVisualTest')

    jvmArgs = [
            '--module-path', "${System.getenv('JAVA_FX_LIB')}",
            '--add-modules', 'javafx.controls,javafx.base'
    ]
}

//jlink {
//    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
//    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
//    launcher {
//        name = 'app'
//    }
//}

//jlinkZip {
//    group = 'distribution'
//}

